# Cove

./: CMakeLists.txt  LICENSE  Makefile  README.md
notes/: style_guide.md
src/: main.c  main.cpp
